--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#1a1a2e" />
-    <meta name="description" content="System Design Learning Platform" />
+    <meta name="theme-color" content="#3b82f6" />
+    <meta name="description" content="System Design Learning Platform - Master system design with tutorials, assignments, and quizzes" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="alternate icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <title>System Design Platform</title>
     <script>
       (function() {
